--- a/app/assets/stylesheets/web/ost/index/HomeOverwrite.scss
+++ b/app/assets/stylesheets/web/ost/index/HomeOverwrite.scss
@@ -16,12 +16,12 @@
 //
 //
 @media (min-width: map-get($grid-breakpoints, "lg") ){
-  .push-top{
-    @include push(-75%);
-  }
-  .push-bottom{
-    @include push(30%);
-  }
+  //.push-top{
+  //  @include push(-75%);
+  //}
+  //.push-bottom{
+  //  @include push(30%);
+  //}
 }
 
 .side-by-side-3-img-wrap {
