--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -1,4 +1,4 @@
-<section class="container-jumbotron denim-blue pt-5 pt-lg-6 position-relative side-by-side-2-wrapper">
+<section class="container-jumbotron pt-5 pt-lg-6 position-relative side-by-side-2-wrapper">
     <div class="container content-z-index" >
       <div class="row ">
         <div class="position-absolute d-none d-lg-block" style="top: 45%;left: 39%;transform: rotate(-10deg);height: 100%;max-width: 360px;" >
@@ -26,6 +26,10 @@
       </div>
     </div>
 
-  <div class="polygon-3 d-none d-lg-block"></div>
-  <div class="polygon-4 d-none d-lg-block"></div>
+  <div class="hp-section-bg-wrap">
+    <div class="section-background background-2"></div>
+    <div class="polygon-3 section-polygon-top d-none d-xl-block"></div>
+    <div class="polygon-4 section-polygon-bottom d-none d-xl-block"></div>
+  </div>
+
 </section>
