--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -9,7 +9,7 @@
         <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" target="_blank" title="Discover OST Network">Discover OST Network</a>
       </div>
       <div class="col-md-12 col-lg-6 text-lg-center text-left order-1 order-lg-2 side-by-side-3-img-wrap" >
-            <img class="img-fluid responsively-lazy ost-home-web-img"
+            <img class="img-fluid responsively-lazy"
                  src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-new.png"
                  data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-interoperability-new.png"
                  srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
@@ -18,5 +18,10 @@
       </div>
 
     </div>
+  </div>
+
+  <div class="hp-section-bg-wrap">
+    <div class="polygon-5 section-polygon-top d-none d-xl-block"></div>
+    <div class="polygon-6 section-polygon-bottom d-none d-xl-block" ></div>
   </div>
 </section>
