--- a/app/views/web/ost/index/_side_by_side_5.erb
+++ b/app/views/web/ost/index/_side_by_side_5.erb
@@ -1,5 +1,5 @@
-<section class="container-jumbotron py-4">
-    <div class="container">
+<section class="container-jumbotron py-4 position-relative">
+    <div class="container content-z-index">
       <div class="row align-items-center">
 
         <div class="col-12 col-lg-4 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto
@@ -23,4 +23,8 @@
 
       </div>
     </div>
+
+  <div class="hp-section-bg-wrap">
+    <div class="polygon-7 section-polygon-top d-none d-xl-block" ></div>
+  </div>
 </section>
