--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -32,25 +32,25 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .container-jumbotron{
-  &.midnight-blue{
-    background-image: linear-gradient(-4deg, #fff 30%, #34445b 30.1%);
-  }
-  &.denim-blue{
-    background: #fff;
-    background-image: linear-gradient(-5deg, #fff 30%, #438BAD 30.1%);
-    @media (max-width: map-get($grid-breakpoints, "lg") ){
-      background: #438BAD;
-      background-image: linear-gradient(-5deg, #438BAD 50%, #fff 50.1%);
-    }
-  }
-  &.side-by-side-4-container{
-    background: #fff;
-    background-image: linear-gradient(-5deg, #fff 30%, #27B9D2 30.1%);
-    @media (max-width: map-get($grid-breakpoints, "lg") ){
-      background: #27B9D2;
-      background-image: linear-gradient(-5deg, #27B9D2 50%, #fff 50.1%);
-    }
-  }
+  //&.midnight-blue{
+  //  background-image: linear-gradient(-4deg, #fff 30%, #34445b 30.1%);
+  //}
+  //&.denim-blue{
+  //  background: #fff;
+  //  background-image: linear-gradient(-5deg, #fff 30%, #438BAD 30.1%);
+  //  @media (max-width: map-get($grid-breakpoints, "lg") ){
+  //    background: #438BAD;
+  //    background-image: linear-gradient(-5deg, #438BAD 50%, #fff 50.1%);
+  //  }
+  //}
+  //&.side-by-side-4-container{
+  //  background: #fff;
+  //  background-image: linear-gradient(-5deg, #fff 30%, #27B9D2 30.1%);
+  //  @media (max-width: map-get($grid-breakpoints, "lg") ){
+  //    background: #27B9D2;
+  //    background-image: linear-gradient(-5deg, #27B9D2 50%, #fff 50.1%);
+  //  }
+  //}
 
   .header-title{
     letter-spacing: 0.5px;
@@ -320,59 +320,141 @@ h1, h2, h3, h4, h5, h6{
 
 .content-z-index {
   position: relative;
-  z-index: 10;
+  z-index: 50;
 }
 
-.side-by-side-2-wrapper {
-  .polygon-3 {
-    -webkit-clip-path: polygon(0 53%, 40% 20%, 30% 100%, 0% 100%);
-    clip-path: polygon(0 53%, 40% 20%, 30% 100%, 0% 100%);
+.hp-section-bg-wrap {
+
+  $desktopBreakPoint : 1400px;
+
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top:0;
+  right: 0;
+
+  .section-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 20;
+  }
+
+  .section-polygon-top{
     height: 100%;
     width: 100%;
     position: absolute;
-    bottom: 0;
-    left: 0;
-    background-image: linear-gradient(-5deg, transparent 30%, #7dd5e4 30.1%);
-    z-index: 2;
+    z-index: 30;
   }
 
-  .polygon-4 {
-    -webkit-clip-path: polygon(0 47%, 42% 27%, 46% 68%, 0% 100%);
-    clip-path: polygon(0 47%, 42% 27%, 46% 68%, 0% 100%);
+  .section-polygon-bottom{
     height: 100%;
     width: 100%;
     position: absolute;
-    bottom: -14%;
-    left: 0;
-    background-color: #beedef;
-    z-index: 1;
+    z-index: 10;
   }
-}
 
-.side-by-side-1-wrapper {
+
+  .background-1 {
+    background-image: linear-gradient(-5deg, transparent 40%, #34445b 40.1%);
+    @media only screen and (max-width: map-get($grid-breakpoints, "md")) {
+      background-image: linear-gradient(-5deg, transparent 15%, #34445b 15.1%);
+    }
+  }
+
+
   .polygon-1 {
-    background-image: linear-gradient(-4deg, transparent 30%, #438bad 30.1%);
-    -webkit-clip-path: polygon(75% 29%, 100% 37%, 100% 100%, 64% 100%);
-    clip-path: polygon(75% 29%, 100% 37%, 100% 100%, 64% 100%);
-    height: 100%;
-    width: 100%;
-    position: absolute;
+    background-image: linear-gradient(-5deg, transparent 40%, #438bad 40.1%);
     bottom: 0;
     right: 0;
-    z-index: 2;
+    -webkit-clip-path: polygon(72% 16%, 100% 40%, 100% 100%, 68% 100%);
+    clip-path: polygon(72% 16%, 100% 40%, 100% 100%, 68% 100%);
+    @media (min-width: $desktopBreakPoint) {
+      -webkit-clip-path: polygon(68% 16%, 100% 40%, 100% 100%, 68% 100%);
+      clip-path: polygon(68% 16%, 100% 40%, 100% 100%, 68% 100%);
+    }
   }
 
   .polygon-2 {
-    -webkit-clip-path: polygon(60% 10%, 100% 0%, 100% 95%, 100% 100%);
-    clip-path: polygon(60% 10%, 100% 0%, 100% 95%, 100% 100%);
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    bottom: -60%;
+    -webkit-clip-path: polygon(26% 18%, 100% 0%, 100% 95%, 100% 100%);
+    clip-path: polygon(26% 18%, 100% 0%, 100% 95%, 100% 100%);
+    background-color: rgba( 190, 237, 239, 0.20 );
+    bottom: -10%;
     right: 0;
-    background-color: #beedef;
-    z-index: 1;
   }
+
+
+  .background-2{
+      background-image: linear-gradient(-5deg, transparent 30%, #438BAD 30.1%);
+      @media (max-width: map-get($grid-breakpoints, "lg") ){
+        background: #438BAD;
+        background-image: linear-gradient(-5deg, #438BAD 50%, #fff 50.1%);
+      }
+  }
+
+
+  .polygon-3 {
+    -webkit-clip-path: polygon(-20% 68%, 40% 15%, 30% 100%, 0% 100%);;
+    clip-path: polygon(-20% 68%, 40% 15%, 30% 100%, 0% 100%);;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(-5deg, transparent 30%, #7dd5e4 30.1%);
+    &.color-overwrite {
+      background-image: linear-gradient(-5deg, transparent 30%, #beedef 30.1%);
+    }
+  }
+
+  .polygon-4 {
+    -webkit-clip-path: polygon(0% 50%, 1% 35%, 40% 60%, 0% 100%);
+    clip-path: polygon(0% 50%, 1% 35%, 40% 60%, 0% 100%);
+    bottom: -14%;
+    left: 0;
+    background-color: rgba( 190, 237, 239, 0.20 );
+  }
+
+  .polygon-5 {
+    background-color: #e4b030;
+    top: -48%;
+    right: 0;
+    -webkit-clip-path:polygon(70% 38%, 100% 72%, 100% 81%, 67% 90%);
+    clip-path: polygon(70% 38%, 100% 72%, 100% 81%, 67% 90%);
+  }
+
+  .polygon-6 {
+    -webkit-clip-path: polygon(67% 10%, 100% 0%, 100% 100%, 100% 68%);
+    clip-path:  polygon(67% 10%, 100% 0%, 100% 100%, 100% 68%);
+    background-color: rgba( 255 , 208, 92, 0.20);
+    bottom: -32%;
+    right: 0;
+  }
+
+  .polygon-7 {
+    background-color: #ffd05c;
+    -webkit-clip-path:polygon(100% -15%, 100% 75%, 100% 100%, 46% 60%);
+    clip-path: polygon(100% -15%, 100% 75%, 100% 100%, 46% 60%);
+    top: -58%;
+    right: 0;
+    z-index: 15;
+    height: 130%;
+  }
+
+
+  .background-3 {
+    background-color:#FFF;
+  }
+
+  .background-4 {
+    background-image: linear-gradient(-5deg, transparent 30%, #27B9D2 30.1%);
+    @media (max-width: map-get($grid-breakpoints, "lg") ){
+      background: #27B9D2;
+      background-image: linear-gradient(-5deg, #27B9D2 50%, #fff 50.1%);
+    }
+  }
+
+
 }
+
 
 
