--- a/app/views/web/ost/index/_side_by_side_4.erb
+++ b/app/views/web/ost/index/_side_by_side_4.erb
@@ -1,5 +1,5 @@
 <section class="container-jumbotron pt-5 pt-lg-6 side-by-side-4-container position-relative" >
-    <div class="container">
+    <div class="container content-z-index">
       <div class="row skew-postive">
 
         <div class="position-absolute d-none d-lg-block" style="top: 42%;left: 39%;transform: rotate(10deg);height: 100%;max-width: 360px;" >
@@ -26,4 +26,11 @@
         </div>
       </div>
     </div>
+
+
+  <div class="hp-section-bg-wrap">
+    <div class="section-background background-4"></div>
+    <div class="polygon-3 section-polygon-top  color-overwrite d-none d-xl-block"></div>
+    <div class="polygon-4 section-polygon-bottom  d-none d-xl-block"></div>
+  </div>
 </section>
