--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -24,7 +24,27 @@
           <input type="checkbox" id="developers">
           <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-2 px-1 mx-2 mx-md-0 collapse" id="navbarToggler3">
             <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" target="_blank" class="nav-svg-link d-flex align-items-center" title="API Reference">
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform" class="nav-svg-link d-flex align-items-center" title="Docs">
+                <svg class="nav-svg">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-documents-icon"></use>
+                  </switch>
+                </svg>
+                <span class="pl-1">Docs</span>
+              </a>
+            </li>
+            <li>
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk" class="nav-svg-link d-flex align-items-center" title="SDK References">
+                <svg class="nav-svg">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-sdk-icon"></use>
+                  </switch>
+                </svg>
+                <span class="pl-1">SDK References</span>
+              </a>
+            </li>
+            <li>
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/api" target="_blank" class="nav-svg-link d-flex align-items-center" title="API Reference">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-api-reference-icon"></use>
@@ -33,63 +53,15 @@
                 <span class="pl-1">API Reference</span>
               </a>
             </li>
-            <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
-              <svg class="nav-svg">
-                <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-challenges-icon"></use>
-                </switch>
-              </svg>
-              <span class="pl-1">Dev Challenges</span>
-              <span class="drop-icon drop-icon-right"></span>
-              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="devChallenges" data-toggle="collapse" data-target="#navbarToggler4" aria-controls="navbarToggler4" aria-expanded="false" aria-label="Toggle navigation"></label>
-            </a>
-              <input type="checkbox" id="devChallenges">
-              <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler4">
-                <li>
-                  <a href="<%= GlobalConstant::Base.root_url %>challenges" class="nav-svg-link d-flex align-items-center" title="Alpha II Challenge">
-                    <span class="pl-1">Alpha II Challenge</span>
-                  </a>
-                </li>
-                <li class="mb-0 mb-md-2">
-                  <a href="<%= GlobalConstant::Base.root_url %>challenges-2" class="nav-svg-link d-flex align-items-center" title="Alpha III Challenge">
-                    <span class="pl-1">Alpha III Challenge</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
             <li>
-              <a href="<%= GlobalConstant::Base.root_url %>roadmap" class="nav-svg-link d-flex align-items-center" title="Roadmap">
+              <a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" class="nav-svg-link d-flex align-items-center" title="Developer Chat">
                 <svg class="nav-svg">
                   <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-roadmap-icon"></use>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-chat-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-1">Roadmap</span>
+                <span class="pl-1">Developer Chat</span>
               </a>
-            </li>
-            <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
-              <svg class="nav-svg">
-                <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-white-paper-icon"></use>
-                </switch>
-              </svg>
-              <span class="pl-1">White Paper</span>
-              <span class="drop-icon drop-icon-right"></span>
-              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="devChallenges" data-toggle="collapse" data-target="#navbarToggler6" aria-controls="navbarToggler6" aria-expanded="false" aria-label="Toggle navigation"></label>
-            </a>
-              <input type="checkbox" id="devChallenges">
-              <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler6">
-                <li>
-                  <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Protocol">
-                    <span class="pl-1">OpenSt Protocol</span>
-                  </a>
-                </li>
-                <li class="mb-0 mb-md-2">
-                  <a href="https://github.com/OpenST/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" target="_blank" class="nav-svg-link d-flex align-items-center" title="Mosaic Protocol">
-                    <span class="pl-1">Mosaic Protocol</span>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
               <svg class="nav-svg">
@@ -116,14 +88,62 @@
               </ul>
             </li>
             <li>
-              <a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" class="nav-svg-link d-flex align-items-center" title="Developer Chat">
+              <a href="<%= GlobalConstant::Base.root_url %>roadmap" class="nav-svg-link d-flex align-items-center" title="Roadmap">
                 <svg class="nav-svg">
                   <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-chat-icon"></use>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-roadmap-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-1">Developer Chat</span>
+                <span class="pl-1">Roadmap</span>
               </a>
+            </li>
+            <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
+              <svg class="nav-svg">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-challenges-icon"></use>
+                </switch>
+              </svg>
+              <span class="pl-1">Dev Challenges</span>
+              <span class="drop-icon drop-icon-right"></span>
+              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="devChallenges" data-toggle="collapse" data-target="#navbarToggler4" aria-controls="navbarToggler4" aria-expanded="false" aria-label="Toggle navigation"></label>
+            </a>
+              <input type="checkbox" id="devChallenges">
+              <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler4">
+                <li>
+                  <a href="<%= GlobalConstant::Base.root_url %>challenges" class="nav-svg-link d-flex align-items-center" title="Alpha II Challenge">
+                    <span class="pl-1">Alpha II Challenge</span>
+                  </a>
+                </li>
+                <li class="mb-0 mb-md-2">
+                  <a href="<%= GlobalConstant::Base.root_url %>challenges-2" class="nav-svg-link d-flex align-items-center" title="Alpha III Challenge">
+                    <span class="pl-1">Alpha III Challenge</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
+              <svg class="nav-svg">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-white-paper-icon"></use>
+                </switch>
+              </svg>
+              <span class="pl-1">White Paper</span>
+              <span class="drop-icon drop-icon-right"></span>
+              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="devChallenges" data-toggle="collapse" data-target="#navbarToggler6" aria-controls="navbarToggler6" aria-expanded="false" aria-label="Toggle navigation"></label>
+            </a>
+              <input type="checkbox" id="devChallenges">
+              <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler6">
+                <li>
+                  <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Protocol">
+                    <span class="pl-1">OpenSt Protocol</span>
+                  </a>
+                </li>
+                <li class="mb-0 mb-md-2">
+                  <a href="https://github.com/OpenST/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" target="_blank" class="nav-svg-link d-flex align-items-center" title="Mosaic Protocol">
+                    <span class="pl-1">Mosaic Protocol</span>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </li>
