--- a/app/views/web/ost/roadmap/desktop/_2019-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q2.erb
@@ -10,28 +10,25 @@
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
       <div class="container-content">
         <div class="text-bold">OpenST Protocol 0.10</div>
-        <div class="status">Status: In Progress</div>
-<!--        <div class="status">Status: <%#= get_current_quater_roadmap_status(2019, 2) %></div>-->
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
       </div>
     </div>
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
       <div class="container-content p-15-10">
         <div class="text-bold">OpenST Mosaic Alpha</div>
-        <div class="status">Status: In Progress</div>
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
       </div>
     </div>
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
       <div class="container-content">
         <div class="text-bold">Scalability & Performance</div>
-        <div class="status">Status: In Progress</div>
-<!--        <div class="status">Status: <%#= get_current_quater_roadmap_status(2019, 2) %></div>-->
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
       </div>
     </div>
     <div class="col-4 bg-line third py-6 align-items-center d-flex">
       <div class="container-content">
         <div class="text-bold">Redeem BT for in-app purchases</div>
-        <div class="status">Status: In Progress</div>
-<!--        <div class="status">Status: <%#= get_current_quater_roadmap_status(2019, 2) %></div>-->
+        <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
       </div>
     </div>
   </div>
