--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -220,14 +220,13 @@
   <div class="col-6 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol 0.10</div>
-      <div class="status">Status: In Progress</div>
-<!--      <div class="status">Status: <%#= get_current_quater_roadmap_status(2019, 2) %></div>-->
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
     </div>
   </div>
   <div class="col-6 bg-line first pt-5 d-flex">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Mosaic Alpha</div>
-      <div class="status">Status: In Progress</div>
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
     </div>
   </div>
 </div>
