--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -13,13 +13,16 @@
         <div class="col-12 col-md mb-3 mb-sm-0">
           <h6 class="text-uppercase">Developers</h6>
           <ul class="footer-nav list-unstyled">
-            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" target="_blank" title="API Reference">API Reference</a></li>
+            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform" target="_blank" title="Docs">Docs</a></li>
+            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk" target="_blank" title="SDK References">SDK References</a></li>
+            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/api" target="_blank" title="API Reference">API Reference</a></li>
+            <li><a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" title="Developer Chat">Developer Chat</a></li>
+            <li><a href="https://github.com/OpenST" target="_blank" title="OpenST Foundation Github">OpenST Foundation Github</a></li>
+            <li><a href="https://github.com/ostdotcom" target="_blank" title="OST Github">OST Github</a></li>
+            <li><a href="<%= GlobalConstant::Base.root_url %>roadmap" title="Roadmap">Roadmap</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>challenges" title="Dev Challenges">Dev Challenges</a></li>
             <li><a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" title="OpenSt Protocol">OpenST Protocol Whitepaper</a></li>
             <li><a href="https://github.com/OpenST/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" target="_blank" title="Mosaic Protocol">Mosaic Protocol Whitepaper</a></li>
-            <li><a href="https://github.com/OpenST" target="_blank" title="OpenST Foundation Github">OpenST Foundation Github</a></li>
-            <li><a href="https://github.com/ostdotcom" target="_blank" title="OST Github">OST Github</a></li>
-            <li><a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" title="Developer Chat">Developer Chat</a></li>
           </ul>
         </div>
         <div class="col-12 col-md mb-3 mb-sm-0">
