--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -79,6 +79,15 @@
       </g>
     </g>
   </symbol>
+  <symbol id="dropdown-sdk-icon" viewBox="-2 -6 24 24">
+    <path d="M15.43 7.8l.26-.61-.91-.89-.61.26a3.1 3.1 0 0 0-.77-.31l-.21-.63H11.9l-.24.63a3.57 3.57 0 0 0-.76.31l-.61-.26-.89.89.26.61a3.1 3.1 0 0 0-.31.77l-.63.24v1.28l.63.24a3.57 3.57 0 0 0 .31.76l-.26.61.91.9.61-.26a2.8 2.8 0 0 0 .76.3l.24.63h1.27l.24-.63a3.08 3.08 0 0 0 .76-.3l.61.26.91-.9-.26-.61a3.19 3.19 0 0 0 .31-.76l.63-.24V8.81l-.66-.24a3 3 0 0 0-.3-.77zm-2.9 3.2a1.57 1.57 0 1 1 1.57-1.56A1.56 1.56 0 0 1 12.53 11z" clip-rule="evenodd" stroke-width=".88" stroke-miterlimit="10" stroke="#34445b" fill="none"/>
+    <path fill="none" d="M8.72 5.61h7.73v7.73H8.72z"/>
+    <rect fill="none" stroke="#34445b" stroke-miterlimit="10" x=".5" y=".5" width="18" height="15" rx="2.05"/>
+    <path fill="none" stroke="#34445b" stroke-miterlimit="10" d="M.5 3.5h18"/>
+    <path stroke-linecap="round" stroke-linejoin="round" stroke="#34445b" fill="none" d="M4.25 7.31L6.43 9.5l-2.2 2.21"/>
+    <path stroke="#686f77" stroke-width=".08" stroke-miterlimit="10" fill="none" d="M8.34 5.24h8.43v8.42H8.34z"/>
+    <path d="M15.43 7.8l.26-.61-.91-.89-.61.26a3.1 3.1 0 0 0-.77-.31l-.21-.63H11.9l-.24.63a3.57 3.57 0 0 0-.76.31l-.61-.26-.89.89.26.61a3.1 3.1 0 0 0-.31.77l-.63.24v1.28l.63.24a3.57 3.57 0 0 0 .31.76l-.26.61.91.9.61-.26a2.8 2.8 0 0 0 .76.3l.24.63h1.27l.24-.63a3.08 3.08 0 0 0 .76-.3l.61.26.91-.9-.26-.61a3.19 3.19 0 0 0 .31-.76l.63-.24V8.81l-.66-.24a3 3 0 0 0-.3-.77zm-2.9 3.2a1.57 1.57 0 1 1 1.57-1.56A1.56 1.56 0 0 1 12.53 11z" fill-rule="evenodd" stroke-width=".88" stroke-miterlimit="10" stroke="#34445b" fill="none"/>
+  </symbol>
   <symbol id="icon-megaphone" viewBox="0 0 90.8 57.8">
     <path fill="#ffffff" d="M61,18.8V3.3c0-0.8-0.7-1.5-1.5-1.5c-0.2,0-0.4,0-0.6,0.1c-0.9,0.4-1.7,0.8-2.6,1.2
 	c-11,5.1-20.9,9.7-43.6,9.7H9.9C4.4,12.9,0,17.3,0,22.8v5.6c0,5.4,4.4,10.4,9.9,10.4h2.8c2.4,0,4.2,0,6.4,0.1
@@ -430,7 +439,6 @@
         </g>
       </g>
     </g>
-
   </symbol>
 
 </svg>
