--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -155,8 +155,7 @@
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">Scalability & Performance</div>
-      <div class="status">Status: In Progress</div>
-<!--      <div class="status">Status: <%#= get_current_quater_roadmap_status(2019, 2) %></div>-->
+      <div class="status">Status: <%= get_current_quater_roadmap_status(2019, 2) %></div>
     </div>
   </div>
 </div>
