--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -325,7 +325,7 @@ h1, h2, h3, h4, h5, h6{
 
 .hp-section-bg-wrap {
 
-  $desktopBreakPoint : 1400px;
+  $desktopBreakPoint : 1460px;
 
   position: absolute;
   width: 100%;
@@ -369,8 +369,8 @@ h1, h2, h3, h4, h5, h6{
     background-image: linear-gradient(-5deg, transparent 40%, #438bad 40.1%);
     bottom: 0;
     right: 0;
-    -webkit-clip-path: polygon(72% 16%, 100% 40%, 100% 100%, 68% 100%);
-    clip-path: polygon(72% 16%, 100% 40%, 100% 100%, 68% 100%);
+    -webkit-clip-path: polygon(88% 13%, 100% 33%, 100% 100%, 46% 100%);
+    clip-path: polygon(88% 13%, 100% 33%, 100% 100%, 46% 100%);
     @media (min-width: $desktopBreakPoint) {
       -webkit-clip-path: polygon(68% 16%, 100% 40%, 100% 100%, 68% 100%);
       clip-path: polygon(68% 16%, 100% 40%, 100% 100%, 68% 100%);
@@ -378,8 +378,14 @@ h1, h2, h3, h4, h5, h6{
   }
 
   .polygon-2 {
-    -webkit-clip-path: polygon(26% 18%, 100% 0%, 100% 95%, 100% 100%);
-    clip-path: polygon(26% 18%, 100% 0%, 100% 95%, 100% 100%);
+    clip-path: polygon(46% 18%, 100% 0%, 100% 95%, 100% 100%);
+    -webkit-clip-path: polygon(46% 18%, 100% 0%, 100% 95%, 100% 100%);
+
+    @media (min-width: $desktopBreakPoint) {
+      -webkit-clip-path: polygon(26% 18%, 100% 0%, 100% 95%, 100% 100%);
+      clip-path: polygon(26% 18%, 100% 0%, 100% 95%, 100% 100%);
+    }
+
     background-color: rgba( 190, 237, 239, 0.20 );
     bottom: -10%;
     right: 0;
@@ -396,8 +402,14 @@ h1, h2, h3, h4, h5, h6{
 
 
   .polygon-3 {
-    -webkit-clip-path: polygon(-20% 68%, 40% 15%, 30% 100%, 0% 100%);;
-    clip-path: polygon(-20% 68%, 40% 15%, 30% 100%, 0% 100%);;
+
+    -webkit-clip-path: polygon(-20% 68%, 28% 13%, 28% 100%, 0% 100%);
+    clip-path: polygon(-20% 68%, 28% 13%, 28% 100%, 0% 100%);
+
+    @media (min-width: $desktopBreakPoint) {
+      -webkit-clip-path: polygon(-20% 68%, 40% 15%, 30% 100%, 0% 100%);
+      clip-path: polygon(-20% 68%, 40% 15%, 30% 100%, 0% 100%);
+    }
     bottom: 0;
     left: 0;
     background-image: linear-gradient(-5deg, transparent 30%, #7dd5e4 30.1%);
@@ -407,8 +419,16 @@ h1, h2, h3, h4, h5, h6{
   }
 
   .polygon-4 {
-    -webkit-clip-path: polygon(0% 50%, 1% 35%, 40% 60%, 0% 100%);
-    clip-path: polygon(0% 50%, 1% 35%, 40% 60%, 0% 100%);
+
+    -webkit-clip-path: polygon(0% 50%, 0% 36%, 30% 70%, 0% 100%);
+    clip-path: polygon(0% 50%, 0% 36%, 30% 70%, 0% 100%);
+
+    @media (min-width: $desktopBreakPoint) {
+      -webkit-clip-path: polygon(0% 50%, 1% 35%, 40% 60%, 0% 100%);
+      clip-path: polygon(0% 50%, 1% 35%, 40% 60%, 0% 100%);
+    }
+
+
     bottom: -14%;
     left: 0;
     background-color: rgba( 190, 237, 239, 0.20 );
@@ -418,8 +438,15 @@ h1, h2, h3, h4, h5, h6{
     background-color: #e4b030;
     top: -48%;
     right: 0;
-    -webkit-clip-path:polygon(70% 38%, 100% 72%, 100% 81%, 67% 90%);
-    clip-path: polygon(70% 38%, 100% 72%, 100% 81%, 67% 90%);
+
+    -webkit-clip-path : polygon(86% 35%, 100% 59%, 100% 81%, 67% 90%);
+    clip-path: polygon(86% 35%, 100% 59%, 100% 81%, 67% 90%);
+
+    @media (min-width: $desktopBreakPoint) {
+      -webkit-clip-path:polygon(70% 38%, 100% 72%, 100% 81%, 67% 90%);
+      clip-path: polygon(70% 38%, 100% 72%, 100% 81%, 67% 90%);
+    }
+
   }
 
   .polygon-6 {
