--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -24,7 +24,7 @@
           <input type="checkbox" id="developers">
           <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-2 px-1 mx-2 mx-md-0 collapse" id="navbarToggler3">
             <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform" class="nav-svg-link d-flex align-items-center" title="Docs">
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform" target="_blank" class="nav-svg-link d-flex align-items-center" title="Docs">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-documents-icon"></use>
@@ -34,7 +34,7 @@
               </a>
             </li>
             <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk" class="nav-svg-link d-flex align-items-center" title="SDK References">
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk" target="_blank" class="nav-svg-link d-flex align-items-center" title="SDK References">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-sdk-icon"></use>
