--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -79,14 +79,17 @@
       </g>
     </g>
   </symbol>
-  <symbol id="dropdown-sdk-icon" viewBox="-2 -6 24 24">
-    <path d="M15.43 7.8l.26-.61-.91-.89-.61.26a3.1 3.1 0 0 0-.77-.31l-.21-.63H11.9l-.24.63a3.57 3.57 0 0 0-.76.31l-.61-.26-.89.89.26.61a3.1 3.1 0 0 0-.31.77l-.63.24v1.28l.63.24a3.57 3.57 0 0 0 .31.76l-.26.61.91.9.61-.26a2.8 2.8 0 0 0 .76.3l.24.63h1.27l.24-.63a3.08 3.08 0 0 0 .76-.3l.61.26.91-.9-.26-.61a3.19 3.19 0 0 0 .31-.76l.63-.24V8.81l-.66-.24a3 3 0 0 0-.3-.77zm-2.9 3.2a1.57 1.57 0 1 1 1.57-1.56A1.56 1.56 0 0 1 12.53 11z" clip-rule="evenodd" stroke-width=".88" stroke-miterlimit="10" stroke="#34445b" fill="none"/>
-    <path fill="none" d="M8.72 5.61h7.73v7.73H8.72z"/>
-    <rect fill="none" stroke="#34445b" stroke-miterlimit="10" x=".5" y=".5" width="18" height="15" rx="2.05"/>
-    <path fill="none" stroke="#34445b" stroke-miterlimit="10" d="M.5 3.5h18"/>
-    <path stroke-linecap="round" stroke-linejoin="round" stroke="#34445b" fill="none" d="M4.25 7.31L6.43 9.5l-2.2 2.21"/>
-    <path stroke="#686f77" stroke-width=".08" stroke-miterlimit="10" fill="none" d="M8.34 5.24h8.43v8.42H8.34z"/>
-    <path d="M15.43 7.8l.26-.61-.91-.89-.61.26a3.1 3.1 0 0 0-.77-.31l-.21-.63H11.9l-.24.63a3.57 3.57 0 0 0-.76.31l-.61-.26-.89.89.26.61a3.1 3.1 0 0 0-.31.77l-.63.24v1.28l.63.24a3.57 3.57 0 0 0 .31.76l-.26.61.91.9.61-.26a2.8 2.8 0 0 0 .76.3l.24.63h1.27l.24-.63a3.08 3.08 0 0 0 .76-.3l.61.26.91-.9-.26-.61a3.19 3.19 0 0 0 .31-.76l.63-.24V8.81l-.66-.24a3 3 0 0 0-.3-.77zm-2.9 3.2a1.57 1.57 0 1 1 1.57-1.56A1.56 1.56 0 0 1 12.53 11z" fill-rule="evenodd" stroke-width=".88" stroke-miterlimit="10" stroke="#34445b" fill="none"/>
+  <symbol id="dropdown-sdk-icon" viewBox="-3 -3 24 24">
+    <rect fill="none" stroke="#34445b" stroke-miterlimit="10" stroke-width=".86px" x=".43" y=".43" width="17.48" height="17.48" rx="1.61"/>
+    <path d="M14.7 6.3l-1.54-2a.51.51 0 0 0-.41-.2H5.58a.51.51 0 0 0-.41.2l-1.53 2a.51.51 0 0 0-.11.31v7.16a.52.52 0 0 0 .52.52h10.24a.51.51 0 0 0 .51-.52V6.61a.52.52 0 0 0-.1-.31z" clip-rule="evenodd" stroke-width=".86" stroke-miterlimit="10" stroke="#34445b" fill="none"/>
+    <path d="M11.09 9.35l.17-.41-.6-.59-.4.17a2.58 2.58 0 0 0-.51-.2l-.14-.42h-.85l-.16.42a2.75 2.75 0 0 0-.5.2l-.41-.17-.59.59.17.41a2.48 2.48 0 0 0-.2.5l-.41.15v.85l.41.16a2.75 2.75 0 0 0 .2.5l-.17.41.61.59.4-.17a2.75 2.75 0 0 0 .5.2l.16.42h.84l.16-.42a3.07 3.07 0 0 0 .5-.2l.4.17.61-.59-.17-.41a2.27 2.27 0 0 0 .2-.5l.42-.16V10l-.44-.16a1.94 1.94 0 0 0-.2-.49zm-1.91 1.88a.8.8 0 1 1 0-1.6.8.8 0 0 1 0 1.6z" fill="#34445b" clip-rule="evenodd"/>
+    <path fill="none" d="M6.66 7.9h5.11v5.11H6.66z"/>
+    <rect fill="none" stroke="#34445b" stroke-miterlimit="10" stroke-width=".86px" x=".43" y=".43" width="17.48" height="17.48" rx="1.61"/>
+    <path stroke-width=".58" stroke-miterlimit="10" stroke="#34445b" fill="none" d="M.43.43h17.48v17.48H.43z"/>
+    <path d="M14.7 6.3l-1.54-2a.51.51 0 0 0-.41-.2H5.58a.51.51 0 0 0-.41.2l-1.53 2a.51.51 0 0 0-.11.31v7.16a.52.52 0 0 0 .52.52h10.24a.51.51 0 0 0 .51-.52V6.61a.52.52 0 0 0-.1-.31z" fill-rule="evenodd" stroke-width=".86" stroke-miterlimit="10" stroke="#34445b" fill="none"/>
+    <path fill="none" stroke="#34445b" stroke-miterlimit="10" stroke-width=".86px" d="M14.5 6.6H3.66"/>
+    <path d="M11.09 9.35l.17-.41-.6-.59-.4.17a2.58 2.58 0 0 0-.51-.2l-.14-.42h-.85l-.16.42a2.75 2.75 0 0 0-.5.2l-.41-.17-.59.59.17.41a2.48 2.48 0 0 0-.2.5l-.41.15v.85l.41.16a2.75 2.75 0 0 0 .2.5l-.17.41.61.59.4-.17a2.75 2.75 0 0 0 .5.2l.16.42h.84l.16-.42a3.07 3.07 0 0 0 .5-.2l.4.17.61-.59-.17-.41a2.27 2.27 0 0 0 .2-.5l.42-.16V10l-.44-.16a1.94 1.94 0 0 0-.2-.49zm-1.91 1.88a.8.8 0 1 1 0-1.6.8.8 0 0 1 0 1.6z" fill-rule="evenodd" fill="#34445b"/>
+    <path stroke="#686f77" stroke-width=".05" stroke-miterlimit="10" fill="none" d="M6.4 7.65h5.58v5.57H6.4z"/>
   </symbol>
   <symbol id="icon-megaphone" viewBox="0 0 90.8 57.8">
     <path fill="#ffffff" d="M61,18.8V3.3c0-0.8-0.7-1.5-1.5-1.5c-0.2,0-0.4,0-0.6,0.1c-0.9,0.4-1.7,0.8-2.6,1.2
