--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -79,17 +79,12 @@
       </g>
     </g>
   </symbol>
-  <symbol id="dropdown-sdk-icon" viewBox="-3 -3 24 24">
-    <rect fill="none" stroke="#34445b" stroke-miterlimit="10" stroke-width=".86px" x=".43" y=".43" width="17.48" height="17.48" rx="1.61"/>
-    <path d="M14.7 6.3l-1.54-2a.51.51 0 0 0-.41-.2H5.58a.51.51 0 0 0-.41.2l-1.53 2a.51.51 0 0 0-.11.31v7.16a.52.52 0 0 0 .52.52h10.24a.51.51 0 0 0 .51-.52V6.61a.52.52 0 0 0-.1-.31z" clip-rule="evenodd" stroke-width=".86" stroke-miterlimit="10" stroke="#34445b" fill="none"/>
-    <path d="M11.09 9.35l.17-.41-.6-.59-.4.17a2.58 2.58 0 0 0-.51-.2l-.14-.42h-.85l-.16.42a2.75 2.75 0 0 0-.5.2l-.41-.17-.59.59.17.41a2.48 2.48 0 0 0-.2.5l-.41.15v.85l.41.16a2.75 2.75 0 0 0 .2.5l-.17.41.61.59.4-.17a2.75 2.75 0 0 0 .5.2l.16.42h.84l.16-.42a3.07 3.07 0 0 0 .5-.2l.4.17.61-.59-.17-.41a2.27 2.27 0 0 0 .2-.5l.42-.16V10l-.44-.16a1.94 1.94 0 0 0-.2-.49zm-1.91 1.88a.8.8 0 1 1 0-1.6.8.8 0 0 1 0 1.6z" fill="#34445b" clip-rule="evenodd"/>
-    <path fill="none" d="M6.66 7.9h5.11v5.11H6.66z"/>
-    <rect fill="none" stroke="#34445b" stroke-miterlimit="10" stroke-width=".86px" x=".43" y=".43" width="17.48" height="17.48" rx="1.61"/>
-    <path stroke-width=".58" stroke-miterlimit="10" stroke="#34445b" fill="none" d="M.43.43h17.48v17.48H.43z"/>
-    <path d="M14.7 6.3l-1.54-2a.51.51 0 0 0-.41-.2H5.58a.51.51 0 0 0-.41.2l-1.53 2a.51.51 0 0 0-.11.31v7.16a.52.52 0 0 0 .52.52h10.24a.51.51 0 0 0 .51-.52V6.61a.52.52 0 0 0-.1-.31z" fill-rule="evenodd" stroke-width=".86" stroke-miterlimit="10" stroke="#34445b" fill="none"/>
-    <path fill="none" stroke="#34445b" stroke-miterlimit="10" stroke-width=".86px" d="M14.5 6.6H3.66"/>
-    <path d="M11.09 9.35l.17-.41-.6-.59-.4.17a2.58 2.58 0 0 0-.51-.2l-.14-.42h-.85l-.16.42a2.75 2.75 0 0 0-.5.2l-.41-.17-.59.59.17.41a2.48 2.48 0 0 0-.2.5l-.41.15v.85l.41.16a2.75 2.75 0 0 0 .2.5l-.17.41.61.59.4-.17a2.75 2.75 0 0 0 .5.2l.16.42h.84l.16-.42a3.07 3.07 0 0 0 .5-.2l.4.17.61-.59-.17-.41a2.27 2.27 0 0 0 .2-.5l.42-.16V10l-.44-.16a1.94 1.94 0 0 0-.2-.49zm-1.91 1.88a.8.8 0 1 1 0-1.6.8.8 0 0 1 0 1.6z" fill-rule="evenodd" fill="#34445b"/>
-    <path stroke="#686f77" stroke-width=".05" stroke-miterlimit="10" fill="none" d="M6.4 7.65h5.58v5.57H6.4z"/>
+  <symbol id="dropdown-sdk-icon" viewBox="3 3 24 24">
+    <path d="M22.3 10.1l-1.87-3.26a1.05 1.05 0 0 0-.86-.44h-9.51a1.08 1.08 0 0 0-.87.44l-2 3.26a.78.78 0 0 0-.17.5v11.51a1.08 1.08 0 0 0 1.08 1.08h13.29a1.08 1.08 0 0 0 1.08-1.08V10.6a.8.8 0 0 0-.17-.5z" clip-rule="evenodd" stroke-miterlimit="10" stroke="#34445b" fill="none"/>
+    <path d="M17.71 15.19l.27-.63-.98-.91-.62.26a3.42 3.42 0 0 0-.79-.31l-.18-.6h-1.32l-.24.65a3.53 3.53 0 0 0-.78.31l-.63-.26-.91.91.26.63a3.18 3.18 0 0 0-.31.78l-.65.25v1.32l.65.24a3.53 3.53 0 0 0 .31.78l-.26.63.93.92.63-.27a3.18 3.18 0 0 0 .78.31l.25.65h1.29l.25-.65a4 4 0 0 0 .78-.31l.62.27.94-.92-.27-.63a2.84 2.84 0 0 0 .32-.78l.64-.24v-1.37L18 16a2.77 2.77 0 0 0-.29-.81zm-3 2.92A1.25 1.25 0 1 1 16 16.86a1.24 1.24 0 0 1-1.26 1.25z" fill="#34445b" clip-rule="evenodd"/>
+    <path fill="none" d="M10.91 12.94h7.92v7.92h-7.92z"/>
+    <path d="M22.3 10.1l-1.87-3.26a1.05 1.05 0 0 0-.86-.44h-9.51a1.08 1.08 0 0 0-.87.44l-2 3.26a.78.78 0 0 0-.17.5v11.51a1.08 1.08 0 0 0 1.08 1.08h13.29a1.08 1.08 0 0 0 1.08-1.08V10.6a.8.8 0 0 0-.17-.5zM22.12 10.59H7.4" stroke-miterlimit="10" stroke="#34445b" fill="none"/>
+    <path d="M17.71 15.19l.27-.63-.98-.91-.62.26a3.42 3.42 0 0 0-.79-.31l-.18-.6h-1.32l-.24.65a3.53 3.53 0 0 0-.78.31l-.63-.26-.91.91.26.63a3.18 3.18 0 0 0-.31.78l-.65.25v1.32l.65.24a3.53 3.53 0 0 0 .31.78l-.26.63.93.92.63-.27a3.18 3.18 0 0 0 .78.31l.25.65h1.29l.25-.65a4 4 0 0 0 .78-.31l.62.27.94-.92-.27-.63a2.84 2.84 0 0 0 .32-.78l.64-.24v-1.37L18 16a2.77 2.77 0 0 0-.29-.81zm-3 2.92A1.25 1.25 0 1 1 16 16.86a1.24 1.24 0 0 1-1.26 1.25z" fill-rule="evenodd" fill="#34445b"/>
   </symbol>
   <symbol id="icon-megaphone" viewBox="0 0 90.8 57.8">
     <path fill="#ffffff" d="M61,18.8V3.3c0-0.8-0.7-1.5-1.5-1.5c-0.2,0-0.4,0-0.6,0.1c-0.9,0.4-1.7,0.8-2.6,1.2
