Hp page code complete

--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -28,8 +28,8 @@
 
   <div class="hp-section-bg-wrap">
     <div class="section-background background-2"></div>
-    <div class="polygon-3 section-polygon-top d-none d-xl-block"></div>
-    <div class="polygon-4 section-polygon-bottom d-none d-xl-block"></div>
+    <div class="polygon-3 section-polygon-top"></div>
+    <div class="polygon-4 section-polygon-bottom"></div>
   </div>
 
 </section>
