--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class="hp-section-bg-wrap">
-    <div class="polygon-5 section-polygon-top d-none d-xl-block"></div>
-    <div class="polygon-6 section-polygon-bottom d-none d-xl-block" ></div>
+    <div class="polygon-5 section-polygon-top"></div>
+    <div class="polygon-6 section-polygon-bottom" ></div>
   </div>
 </section>
