--- a/app/views/web/ost/index/_side_by_side_4.erb
+++ b/app/views/web/ost/index/_side_by_side_4.erb
@@ -30,7 +30,7 @@
 
   <div class="hp-section-bg-wrap">
     <div class="section-background background-4"></div>
-    <div class="polygon-3 section-polygon-top  color-overwrite d-none d-xl-block"></div>
-    <div class="polygon-4 section-polygon-bottom  d-none d-xl-block"></div>
+    <div class="polygon-3 section-polygon-top  color-overwrite"></div>
+    <div class="polygon-4 section-polygon-bottom "></div>
   </div>
 </section>
