--- a/app/views/web/ost/index/_side_by_side_5.erb
+++ b/app/views/web/ost/index/_side_by_side_5.erb
@@ -25,6 +25,6 @@
     </div>
 
   <div class="hp-section-bg-wrap">
-    <div class="polygon-7 section-polygon-top d-none d-xl-block" ></div>
+    <div class="polygon-7 section-polygon-top" ></div>
   </div>
 </section>
