--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -323,6 +323,12 @@ h1, h2, h3, h4, h5, h6{
   z-index: 50;
 }
 
+.side-by-side-1-desc{
+  @media (min-width: map-get($grid-breakpoints, "lg") ) {
+    margin-top: -15%;
+  }
+}
+
 .hp-section-bg-wrap {
 
   $desktopBreakPoint : 1460px;
@@ -342,21 +348,6 @@ h1, h2, h3, h4, h5, h6{
     z-index: 20;
   }
 
-  .section-polygon-top{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    z-index: 30;
-  }
-
-  .section-polygon-bottom{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    z-index: 10;
-  }
-
-
   .background-1 {
     background-image: linear-gradient(-5deg, transparent 40%, #34445b 40.1%);
     @media only screen and (max-width: map-get($grid-breakpoints, "md")) {
@@ -364,109 +355,13 @@ h1, h2, h3, h4, h5, h6{
     }
   }
 
-
-  .polygon-1 {
-    background-image: linear-gradient(-5deg, transparent 40%, #438bad 40.1%);
-    bottom: 0;
-    right: 0;
-    -webkit-clip-path: polygon(88% 13%, 100% 33%, 100% 100%, 46% 100%);
-    clip-path: polygon(88% 13%, 100% 33%, 100% 100%, 46% 100%);
-    @media (min-width: $desktopBreakPoint) {
-      -webkit-clip-path: polygon(68% 16%, 100% 40%, 100% 100%, 68% 100%);
-      clip-path: polygon(68% 16%, 100% 40%, 100% 100%, 68% 100%);
-    }
-  }
-
-  .polygon-2 {
-    clip-path: polygon(46% 18%, 100% 0%, 100% 95%, 100% 100%);
-    -webkit-clip-path: polygon(46% 18%, 100% 0%, 100% 95%, 100% 100%);
-
-    @media (min-width: $desktopBreakPoint) {
-      -webkit-clip-path: polygon(26% 18%, 100% 0%, 100% 95%, 100% 100%);
-      clip-path: polygon(26% 18%, 100% 0%, 100% 95%, 100% 100%);
-    }
-
-    background-color: rgba( 190, 237, 239, 0.20 );
-    bottom: -10%;
-    right: 0;
-  }
-
-
   .background-2{
-      background-image: linear-gradient(-5deg, transparent 30%, #438BAD 30.1%);
-      @media (max-width: map-get($grid-breakpoints, "lg") ){
-        background: #438BAD;
-        background-image: linear-gradient(-5deg, #438BAD 50%, #fff 50.1%);
-      }
-  }
-
-
-  .polygon-3 {
-
-    -webkit-clip-path: polygon(-20% 68%, 28% 13%, 28% 100%, 0% 100%);
-    clip-path: polygon(-20% 68%, 28% 13%, 28% 100%, 0% 100%);
-
-    @media (min-width: $desktopBreakPoint) {
-      -webkit-clip-path: polygon(-20% 68%, 40% 15%, 30% 100%, 0% 100%);
-      clip-path: polygon(-20% 68%, 40% 15%, 30% 100%, 0% 100%);
-    }
-    bottom: 0;
-    left: 0;
-    background-image: linear-gradient(-5deg, transparent 30%, #7dd5e4 30.1%);
-    &.color-overwrite {
-      background-image: linear-gradient(-5deg, transparent 30%, #beedef 30.1%);
+    background-image: linear-gradient(-5deg, transparent 30%, #438BAD 30.1%);
+    @media (max-width: map-get($grid-breakpoints, "lg") ){
+      background: #438BAD;
+      background-image: linear-gradient(-5deg, #438BAD 50%, #fff 50.1%);
     }
   }
-
-  .polygon-4 {
-
-    -webkit-clip-path: polygon(0% 50%, 0% 36%, 30% 70%, 0% 100%);
-    clip-path: polygon(0% 50%, 0% 36%, 30% 70%, 0% 100%);
-
-    @media (min-width: $desktopBreakPoint) {
-      -webkit-clip-path: polygon(0% 50%, 1% 35%, 40% 60%, 0% 100%);
-      clip-path: polygon(0% 50%, 1% 35%, 40% 60%, 0% 100%);
-    }
-
-
-    bottom: -14%;
-    left: 0;
-    background-color: rgba( 190, 237, 239, 0.20 );
-  }
-
-  .polygon-5 {
-    background-color: #e4b030;
-    top: -48%;
-    right: 0;
-
-    -webkit-clip-path : polygon(86% 35%, 100% 59%, 100% 81%, 67% 90%);
-    clip-path: polygon(86% 35%, 100% 59%, 100% 81%, 67% 90%);
-
-    @media (min-width: $desktopBreakPoint) {
-      -webkit-clip-path:polygon(70% 38%, 100% 72%, 100% 81%, 67% 90%);
-      clip-path: polygon(70% 38%, 100% 72%, 100% 81%, 67% 90%);
-    }
-
-  }
-
-  .polygon-6 {
-    -webkit-clip-path: polygon(67% 10%, 100% 0%, 100% 100%, 100% 68%);
-    clip-path:  polygon(67% 10%, 100% 0%, 100% 100%, 100% 68%);
-    background-color: rgba( 255 , 208, 92, 0.20);
-    bottom: -32%;
-    right: 0;
-  }
-
-  .polygon-7 {
-    background-color: #ffd05c;
-    -webkit-clip-path:polygon(100% -15%, 100% 75%, 100% 100%, 46% 60%);
-    clip-path: polygon(100% -15%, 100% 75%, 100% 100%, 46% 60%);
-    top: -58%;
-    right: 0;
-    z-index: 15;
-    height: 130%;
-  }
-
 
   .background-3 {
     background-color:#FFF;
@@ -479,11 +374,124 @@ h1, h2, h3, h4, h5, h6{
       background-image: linear-gradient(-5deg, #27B9D2 50%, #fff 50.1%);
     }
   }
-}
 
-.side-by-side-1-desc{
-  @media (min-width: map-get($grid-breakpoints, "lg") ) {
-    margin-top: -15%;
+  .section-polygon-top , .section-polygon-bottom {
+    display: none;
+  }
+
+  &.polygon-init {
+
+    @media (min-width: map-get($grid-breakpoints, "xl") ){
+      .section-polygon-top , .section-polygon-bottom{
+        display: block;
+      }
+    }
+
+    .section-polygon-top{
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      z-index: 30;
+    }
+
+    .section-polygon-bottom{
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      z-index: 10;
+    }
+
+    .polygon-1 {
+      background-image: linear-gradient(-5deg, transparent 40%, #438bad 40.1%);
+      bottom: 0;
+      right: 0;
+      -webkit-clip-path: polygon(88% 13%, 100% 33%, 100% 100%, 46% 100%);
+      clip-path: polygon(88% 13%, 100% 33%, 100% 100%, 46% 100%);
+      @media (min-width: $desktopBreakPoint) {
+        -webkit-clip-path: polygon(68% 16%, 100% 40%, 100% 100%, 68% 100%);
+        clip-path: polygon(68% 16%, 100% 40%, 100% 100%, 68% 100%);
+      }
+    }
+
+    .polygon-2 {
+      clip-path: polygon(46% 18%, 100% 0%, 100% 95%, 100% 100%);
+      -webkit-clip-path: polygon(46% 18%, 100% 0%, 100% 95%, 100% 100%);
+
+      @media (min-width: $desktopBreakPoint) {
+        -webkit-clip-path: polygon(26% 18%, 100% 0%, 100% 95%, 100% 100%);
+        clip-path: polygon(26% 18%, 100% 0%, 100% 95%, 100% 100%);
+      }
+
+      background-color: rgba( 190, 237, 239, 0.20 );
+      bottom: -10%;
+      right: 0;
+    }
+
+    .polygon-3 {
+
+      -webkit-clip-path: polygon(-20% 68%, 28% 13%, 28% 100%, 0% 100%);
+      clip-path: polygon(-20% 68%, 28% 13%, 28% 100%, 0% 100%);
+
+      @media (min-width: $desktopBreakPoint) {
+        -webkit-clip-path: polygon(-20% 68%, 40% 15%, 30% 100%, 0% 100%);
+        clip-path: polygon(-20% 68%, 40% 15%, 30% 100%, 0% 100%);
+      }
+      bottom: 0;
+      left: 0;
+      background-image: linear-gradient(-5deg, transparent 30%, #7dd5e4 30.1%);
+      &.color-overwrite {
+        background-image: linear-gradient(-5deg, transparent 30%, #beedef 30.1%);
+      }
+    }
+
+    .polygon-4 {
+
+      -webkit-clip-path: polygon(0% 50%, 0% 36%, 30% 70%, 0% 100%);
+      clip-path: polygon(0% 50%, 0% 36%, 30% 70%, 0% 100%);
+
+      @media (min-width: $desktopBreakPoint) {
+        -webkit-clip-path: polygon(0% 50%, 1% 35%, 40% 60%, 0% 100%);
+        clip-path: polygon(0% 50%, 1% 35%, 40% 60%, 0% 100%);
+      }
+
+      bottom: -14%;
+      left: 0;
+      background-color: rgba( 190, 237, 239, 0.20 );
+    }
+
+    .polygon-5 {
+      background-color: #e4b030;
+      top: -48%;
+      right: 0;
+
+      -webkit-clip-path : polygon(86% 35%, 100% 59%, 100% 81%, 67% 90%);
+      clip-path: polygon(86% 35%, 100% 59%, 100% 81%, 67% 90%);
+
+      @media (min-width: $desktopBreakPoint) {
+        -webkit-clip-path:polygon(70% 38%, 100% 72%, 100% 81%, 67% 90%);
+        clip-path: polygon(70% 38%, 100% 72%, 100% 81%, 67% 90%);
+      }
+
+    }
+
+    .polygon-6 {
+      -webkit-clip-path: polygon(67% 10%, 100% 0%, 100% 100%, 100% 68%);
+      clip-path:  polygon(67% 10%, 100% 0%, 100% 100%, 100% 68%);
+      background-color: rgba( 255 , 208, 92, 0.20);
+      bottom: -32%;
+      right: 0;
+    }
+
+    .polygon-7 {
+      background-color: #ffd05c;
+      -webkit-clip-path:polygon(100% -15%, 100% 75%, 100% 100%, 46% 60%);
+      clip-path: polygon(100% -15%, 100% 75%, 100% 100%, 46% 60%);
+      top: -58%;
+      right: 0;
+      z-index: 15;
+      height: 130%;
+    }
+
   }
 }
 
