--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -41,8 +41,8 @@
 
   <div class="hp-section-bg-wrap">
     <div class="section-background background-1"></div>
-    <div class="polygon-1 section-polygon-top d-none d-xl-block"></div>
-    <div class="polygon-2 section-polygon-bottom d-none d-xl-block"></div>
+    <div class="polygon-1 section-polygon-top"></div>
+    <div class="polygon-2 section-polygon-bottom"></div>
   </div>
 
 
