--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -3,7 +3,7 @@
   if ost_home_page_jumbotron.present?
 %>
 
-<section class="container-jumbotron midnight-blue position-relative side-by-side-1-wrapper">
+<section class="container-jumbotron position-relative side-by-side-1-wrapper">
 
   <div class="container content-z-index">
 
@@ -30,7 +30,7 @@
       <div class="col-md-12 col-lg-6 text-lg-center text-left d-none d-lg-block">
         <div class="row align-items-end align-items-md-enter justify-content-end">
           <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-1.png"
-               class="img-fluid push-top ost-home-web-img"
+               class="img-fluid ost-home-web-img"
                alt="OST - Deploy Your Brand Currency"/>
         </div>
       </div>
