--- a/app/assets/stylesheets/web/ost/events-news/Events.scss
+++ b/app/assets/stylesheets/web/ost/events-news/Events.scss
@@ -101,7 +101,7 @@
             }
             th{
               &.next {
-                text-align: right;
+                text-align: center;
               }
               &.datepicker-switch {
                 color: $red;
