--- a/app/views/web/ost/index/_news_carousel.erb
+++ b/app/views/web/ost/index/_news_carousel.erb
@@ -27,10 +27,10 @@
       </div>
       <% end %>
 
-<!--      <div class="d-flex justify-content-center row pb-4">-->
-<!--        <a href="#subscribe" style="min-width:270px;" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Sign up for updates">Sign up for updates</a>-->
-<!--        <a href="/events-news" class="btn btn-secondary my-2 my-md-3 ml-md-3" title="See all news and events">See all news and events</a>-->
-<!--      </div>-->
+      <div class="d-flex justify-content-center row pb-4">
+        <a href="#subscribe" style="min-width:270px;" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Sign up for updates">Sign up for updates</a>
+        <a href="/events-news" class="btn btn-secondary my-2 my-md-3 ml-md-3" title="See all news and events">See all news and events</a>
+      </div>
 
     </div>
   </div>
