--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -7,7 +7,7 @@
 
   <div class="container content-z-index">
 
-    <div class="row pt-4 pt-md-6 pb-6 pb-lg-0">
+    <div class="row pt-4 pt-md-6">
 
       <div class="position-absolute d-none d-lg-block"
            style="top: 7%;left: 39%;transform: rotate(-10deg);height: 100%;max-width: 360px;" >
@@ -27,7 +27,7 @@
         <%end%>
       </div>
 
-      <div class="col-md-12 col-lg-6 text-lg-center text-left d-none d-lg-block">
+      <div class="col-md-12 col-lg-6 text-lg-center text-left pt- pt-lg-0">
         <div class="row align-items-end align-items-md-enter justify-content-end">
           <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-1.png"
                class="img-fluid ost-home-web-img"
