--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -1,6 +1,6 @@
-<section class="container-fluid container-partners pt-4 pt-lg-6 pb-6" id="partners">
-  <div class="container pb-6">
-    <div class="row py-6 py-lg-0">
+<section class="container-fluid container-partners pt-4 pt-lg-6 pb-lg-6" id="partners">
+  <div class="container pb-5 pb-lg-6">
+    <div class="row pt-4 pb-6 py-lg-0">
     <div class="col-12">
       <div class="row align-items-center">
         <div class="col-12 d-block d-lg-none text-center">
