--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -258,6 +258,9 @@ h1, h2, h3, h4, h5, h6{
 #partners {
   background: #fff;
   background-image: linear-gradient(3deg, #fff 18%, #34445b 18.1%);
+  @media only screen and (max-width: map-get($grid-breakpoints, "lg")) {
+    background-image: linear-gradient(3deg, #fff 8%, #34445b 8.1%);
+  }
 }
 
 .ost-home-web-img{
@@ -297,17 +300,14 @@ h1, h2, h3, h4, h5, h6{
   }
 
   .background-1 {
-    background-image: linear-gradient(-5deg, transparent 15%, #34445b 15.2%);
-    @media only screen and (min-width: map-get($grid-breakpoints, "lg")) {
       background-image: linear-gradient(-5deg, transparent 40%, #34445b 40.2%);
-    }
   }
 
   .background-2{
     background-image: linear-gradient(-5deg, transparent 30%, #438BAD 30.2%);
     @media (max-width: map-get($grid-breakpoints, "lg") ){
       background: #438BAD;
-      background-image: linear-gradient(-5deg, #438BAD 50%, #fff 50.2%);
+      background-image: linear-gradient(-5deg, #438BAD 65%, #fff 65.2%);
     }
   }
 
@@ -319,7 +319,7 @@ h1, h2, h3, h4, h5, h6{
     background-image: linear-gradient(-5deg, transparent 30%, #27B9D2 30.2%);
     @media (max-width: map-get($grid-breakpoints, "lg") ){
       background: #27B9D2;
-      background-image: linear-gradient(-5deg, #27B9D2 50%, #fff 50.2%);
+      background-image: linear-gradient(-5deg, #27B9D2 70%, #fff 70.2%);
     }
   }
 
