--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -1,7 +1,7 @@
 <section class="container-jumbotron pb-0 pb-lg-6 position-relative">
   <div class="container content-z-index">
     <div class="row" >
-      <div class="col-12 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto mt-5 mt-lg-6 pt-lg-6">
+      <div class="col-12 col-lg-5 order-2 order-lg-1 pb-6 pb-lg-0 mr-auto mt-4 mt-lg-6 pt-lg-6 px-4 px-lg-0">
         <h5 class="header-title blue side-by-side text-capitalize">Interoperability</h5>
         <p class="mt-3 desc blue">
           Enable your users to easily swap your brand token within the OST Network. You decide which options to include. OST also enables you to earn fees on every redemption.
