--- a/app/assets/stylesheets/web/ost/index/HomeOverwrite.scss
+++ b/app/assets/stylesheets/web/ost/index/HomeOverwrite.scss
@@ -5,9 +5,9 @@
 }
 
 .side-by-side-3-img-wrap {
-  margin-top: -10%;
-  @media (max-width: map-get($grid-breakpoints, "lg") ){
-    margin-top: 10%;
+  margin-top: 10%;
+  @media (min-width: map-get($grid-breakpoints, "lg") ){
+    margin-top: -10%;
   }
 }
 
