--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -204,37 +204,6 @@ h1, h2, h3, h4, h5, h6{
   }
 }
 
-.ost-forward-triangle{
-  position: absolute;
-  left: -40px;
-  right: -40px;
-  bottom: -60px;
-  height: 120px;
-  transform: rotate(0.8deg);
-  background: #fff;
-  &.blue{
-    background-color: #33445b;
-  }
-  &.aqua{
-    background-color: #aee1e3;
-  }
-  &.trans{
-    background-color: #eff9fa;
-  }
-  @media (max-width: 512px){
-    transform: rotate(3.6deg);
-  }
-  @media (min-width: 513px) and (max-width: 768px){
-    transform: rotate(2.8deg);
-  }
-  @media (min-width: 769px) and (max-width: 1024px){
-    transform: rotate(1.8deg);
-  }
-  @media (min-width: 1025px){
-    transform: rotate(2.4deg);
-  }
-}
-
 .uber-banner{
   background: linear-gradient(80deg, #84D1D4 0%, #27B9D2 100%);
   padding: 10px 0;
@@ -304,10 +273,9 @@ h1, h2, h3, h4, h5, h6{
   }
 
   .background-2{
-    background-image: linear-gradient(-5deg, transparent 30%, #438BAD 30.2%);
-    @media (max-width: map-get($grid-breakpoints, "lg") ){
-      background: #438BAD;
-      background-image: linear-gradient(-5deg, #438BAD 65%, #fff 65.2%);
+    background-image: linear-gradient(-5deg, #438BAD 65%, #fff 65.2%);
+    @media (min-width: map-get($grid-breakpoints, "lg") ){
+      background-image: linear-gradient(-5deg, transparent 30%, #438BAD 30.2%);
     }
   }
 
@@ -316,10 +284,9 @@ h1, h2, h3, h4, h5, h6{
   }
 
   .background-4 {
-    background-image: linear-gradient(-5deg, transparent 30%, #27B9D2 30.2%);
-    @media (max-width: map-get($grid-breakpoints, "lg") ){
-      background: #27B9D2;
-      background-image: linear-gradient(-5deg, #27B9D2 70%, #fff 70.2%);
+    background-image: linear-gradient(-5deg, #27B9D2 70%, #fff 70.2%);
+    @media (min-width: map-get($grid-breakpoints, "lg") ){
+      background-image: linear-gradient(-5deg, transparent 30%, #27B9D2 30.2%);
     }
   }
 
