events-news page changes

--- a/app/assets/stylesheets/web/common/_news.scss
+++ b/app/assets/stylesheets/web/common/_news.scss
@@ -5,7 +5,7 @@
 
 .news-container {
   .content-wrapper {
-
+    border-radius: 5px;
     height: 350px;
     position: relative;
     padding: 10px;
