--- a/app/views/web/ost/events_news/_jumbotron.erb
+++ b/app/views/web/ost/events_news/_jumbotron.erb
@@ -1,25 +1,36 @@
-<section class="container-jumbotron py-5 d-none d-md-block">
-  <div class="container">
-    <div class="row align-items-center">
+<section class="container-jumbotron d-none d-md-block">
+  <div class="container-fluid">
+    <div class="row py-5">
+      <div class="container">
+        <div class="row align-items-center">
 
-      <div class="col-md-6 col-lg-6">
-        <h2 class="header-blue-900">A wonderful serenity has taken possession of my soul</h2>
-        <p class="mt-3">
-          A wonderful serenity has taken possession of my entire
-          soul, like these sweet mornings of spring which I enjoy
-          with my whole heart. I am alone, and feel the charm of
-          existence in this spot, which was created for the.
-        </p>
-        <a href="#events" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See Events">See Events</a>
-        <a href="#news" class="btn btn-secondary my-2 ml-md-3 smooth-scroll" title="Read News">Read News</a>
+          <div class="col-md-6 col-lg-6 jumbotron-content">
+            <h2>A wonderful serenity has taken possession of my soul</h2>
+            <p class="mt-3">
+              A wonderful serenity has taken possession of my entire
+              soul, like these sweet mornings of spring which I enjoy
+              with my whole heart. I am alone, and feel the charm of
+              existence in this spot, which was created for the.
+            </p>
+            <a href="#events" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See Events">See Events</a>
+            <a href="#news" class="btn btn-secondary btn-white-border my-2 ml-md-3 smooth-scroll" title="Read News">Read News</a>
+          </div>
+
+          <div class="col-md-6 col-lg-6 text-right my-auto">
+            <div class="row">
+              <div class="col-8 mx-auto">
+                <img
+                  class="img-fluid position-relative" alt="OST events Jumbotron"
+                  src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-events-calendar.png" />
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
-
-      <div class="col-md-6 col-lg-6 text-center my-auto">
-        <img
-          class="img-fluid position-relative" alt="OST events Jumbotron"
-          src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-events-jumbotron.png" />
-      </div>
-
     </div>
   </div>
 </section>
+<svg viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge d-none d-md-block">
+  <polygon points="0,0 100,0 100,100" fill="#35445b" stroke="#35445b"></polygon>
+</svg>
