--- a/app/views/web/ost/events_news/_news.erb
+++ b/app/views/web/ost/events_news/_news.erb
@@ -1,11 +1,7 @@
 <div class="py-5" id="news">
   <div class="container">
-    <h3 class="pl-4 pl-md-2 text-center">
-      <svg class="ost-news-logo">
-        <switch>
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-news-logo"></use>
-        </switch>
-      </svg>
+    <h3 class="text-center font-weight-normal">
+      OST News
     </h3>
     <%
       news = (@dynamic_content.data[GlobalConstant::StaticContentFileName.ost_news]['api_response'] || []) rescue []
