--- a/app/views/web/ost/events_news/_news.erb
+++ b/app/views/web/ost/events_news/_news.erb
@@ -36,6 +36,13 @@
 
   </div>
 </div>
+<section class="container-fluid">
+  <div class="row">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
+      <polygon fill="#f4f8f9" points="0,100 100,0 100,100"></polygon>
+    </svg>
+  </div>
+</section>
 
 <% content_for :end_js do %>
   <script id="news_template" type="text/x-handlebars-template">
