--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -23,7 +23,7 @@
                       </div>
                       <span class="font-weight-normal info-text ost-nav-link">
                         I agree to receive the OST email newsletter with updates on OST products and services from
-                        <a href="/">OST.COM LTD.</a> </span>
+                        <a href="/">OST.COM Inc.</a> </span>
                     </label>
                     <div class="error confirmation_error" data-for="subscribe_confirmation"></div>
                   </div>
