--- a/app/views/web/ost/winners/_subscribe.erb
+++ b/app/views/web/ost/winners/_subscribe.erb
@@ -31,7 +31,7 @@
               </div>
               <span class="font-weight-normal info-text text-left">
                 I agree to receive the OST e-mail Newsletter with updates on OST products and services by
-                <a href="/" class="ost-home-link">OST.COM LTD.</a> </span>
+                <a href="/" class="ost-home-link">OST.COM Inc.</a> </span>
               </span>
             </label>
             <div class="error confirmation_error text-left" data-for="subscribe_confirmation"></div>
