--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -1,3 +1,11 @@
+<section class="container-fluid">
+  <div class="row">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
+      <polygon fill="#f4f8f9" points="0,100 100,0 100,100"></polygon>
+    </svg>
+  </div>
+</section>
+
 <section class="container-fluid footer-nav-wrap position-relative" style="overflow: hidden">
   <div class="row">
     <div class="container">
