--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -29,8 +29,10 @@
 
       <div class="col-md-12 col-lg-6 text-lg-center text-left pt- pt-lg-0">
         <div class="row align-items-end align-items-md-enter justify-content-end">
-          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"
-               class="img-fluid ost-home-web-img"
+          <img class="img-fluid responsively-lazy ost-home-web-img"
+               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"
+               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"
+               srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
                alt="OST - Deploy Your Brand Currency"/>
         </div>
       </div>
