--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -23,7 +23,7 @@
                       </div>
                       <span class="font-weight-normal info-text ost-nav-link">
                         I agree to receive the OST email newsletter with updates on OST products and services from
-                        <a href="/">OST.COM LTD.</a> </span>
+                        <a href="/">OST.COM Inc.</a> </span>
                     </label>
                     <div class="error confirmation_error" data-for="subscribe_confirmation"></div>
                   </div>
@@ -40,13 +40,5 @@
         </div>
       </div>
     </div>
-  </div>
-</section>
-
-<section class="container-fluid">
-  <div class="row">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
-      <polygon fill="#f4f8f9" points="0,100 100,0 100,100"></polygon>
-    </svg>
   </div>
 </section>
