--- a/app/views/web/ost/partners/_jumbotron.erb
+++ b/app/views/web/ost/partners/_jumbotron.erb
@@ -13,7 +13,9 @@
 
       <div class="col-md-12 col-lg-6 text-center mt-4 mt-md-0">
         <div class="illustration w-100">
-          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/ost-partners-jumbotron-hero-image@1x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/ost-partners-jumbotron-hero-image@2x.png 1000w" class="img-fluid position-relative" alt="OST Winners Hero"/>
+          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/ost-partners-jumbotron-hero-image@1x-2.png"
+               srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/ost-partners-jumbotron-hero-image@2x-2.png 1000w"
+               class="img-fluid" alt="OST - Partners"/>
         </div>
       </div>
 
