--- a/app/views/web/ost/index/_events_carousel.erb
+++ b/app/views/web/ost/index/_events_carousel.erb
@@ -15,7 +15,7 @@
 <!--<section class="container-fluid container-upcoming-events pb-4">-->
   <div class="row container-upcoming-events">
     <div class="container">
-      <h2 class="mx-2 mb-4 mt-lg-5 text-center font-weight-normal">OST News & Events</h2>
+      <h2 class="mx-2 mb-4 text-center font-weight-normal">OST News & Events</h2>
       <div style="min-height: 80px;">
         <div id="events-carousel-wrapper" class="d-none">
           <%  ost_event_filtered.each_with_index do |item, index| %>
