--- a/app/views/web/ost/partners/_contact_us.erb
+++ b/app/views/web/ost/partners/_contact_us.erb
@@ -1,9 +1,9 @@
-<section class="container-fluid position-relative pt-5">
+<section id="contactus" class="container-fluid position-relative pt-5" >
   <div class="row container-contact-us py-5">
     <div class="container mx-auto">
       <div class="row">
         <div class="col-12 col-md-6 mx-auto text-center">
-          <h2 class="pt-5 mb-4" id="contactus">Connect with us</h2>
+          <h2 class="pt-5 mb-4">Connect with us</h2>
           <p class="mb-4">Connect with us if you are interested in exploring how the OST | Open Simple Token solutions can apply to your business.</p>
         </div>
       </div>
