--- a/app/views/web/ost/index/_side_by_side_3.erb
+++ b/app/views/web/ost/index/_side_by_side_3.erb
@@ -6,7 +6,7 @@
         <p class="mt-3 desc blue">
           Enable your users to easily swap your brand token within the OST Network. You decide which options to include. OST also enables you to earn fees on every redemption.
         </p>
-        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" target="_blank" title="Discover OST Network">Discover OST Network</a>
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" title="Discover OST Network">Discover OST Network</a>
       </div>
       <div class="col-md-12 col-lg-6 text-lg-center text-left order-1 order-lg-2 side-by-side-3-img-wrap" >
             <img class="img-fluid responsively-lazy"
