--- a/app/views/web/ost/index/_side_by_side_4.erb
+++ b/app/views/web/ost/index/_side_by_side_4.erb
@@ -21,7 +21,7 @@
               <p class="mt-3 desc white">
                 OST Platform includes user friendly wallet solutions to enable users to safely hold and transact with your brand currency within your existing app.
               </p>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" target="_blank" title="Integrate OST Platform">Integrate OST Platform</a>
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/guides/wallet_ux_guide/" class="text-link" title="Integrate OST Platform">Integrate OST Platform</a>
           </div>
         </div>
       </div>
