--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -7,7 +7,7 @@
           <p class="mt-3 desc blue">
             Use your brand tokens to encourage and reward customer behaviors, strengthen loyalty, and drive your engagement and growth metrics.
           </p>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link " target="_blank" title="Deploy Your Brand Token">Deploy Your Brand Token</a>
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" title="Get Started">Get Started</a>
         </div>
 
       </div>
