--- a/app/views/web/ost/index/_side_by_side_2.erb
+++ b/app/views/web/ost/index/_side_by_side_2.erb
@@ -19,7 +19,7 @@
             <p class="mt-3 desc white">
               Build direct relationships with your customers. Cut out the middlemen from transactions, saving you and your customers on extra steps and fees.
             </p>
-            <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" target="_blank" title="Explore OST Platform">Explore OST Platform</a>
+            <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" title="Explore OST Platform">Explore OST Platform</a>
           </div>
         </div>
 
