--- a/app/views/web/ost/index/_side_by_side_5.erb
+++ b/app/views/web/ost/index/_side_by_side_5.erb
@@ -8,7 +8,7 @@
           <p class="mt-3 desc blue">
             OST Platform provides everything you need to test, integrate, and deploy your brand currency. Our APIs, SDKs, dashboards enable fast and painless integration into any app -- so you can focus on your business and leave the blockchain bits to us.
           </p>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link" target="_blank" title="DOCS & APIs">DOCS & APIs</a>
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk/getting_started/overview/" class="text-link" target="_blank" title="DOCS & APIs">DOCS & APIs</a>
 
         </div>
 
